--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+    width: auto;
   }
 
   .btn-primary {
@@ -12,11 +13,26 @@
     height: 40px;
     padding: 12px 24px;
     background: var(--Black, #000);
+    color: white;
+    color: var(--White, #FFF);
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px; /* 114.286% */
   }
   
   .btn-secondary {
     height: 32px;
-    background-color: #6c757d;
+    background-color: white;
     padding: 8px 12px;
-    color: white;
+    color: black;
+    border-radius: 2px;
+    border: 1px solid var(--Black, #000);
+    color: #000;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px; /* 114.286% */
+ 
   }
