--- a/src/app/components/Container/Container.module.scss
+++ b/src/app/components/Container/Container.module.scss
@@ -2,4 +2,9 @@
 width: 100%;
 background-color: lightcyan;
 height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+max-width: 480px;
+
 }
