--- a/src/app/components/MainPage/step1/Step1.module.scss
+++ b/src/app/components/MainPage/step1/Step1.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 24px;
     margin-bottom: 24px;
   
     .tourInfo {
