--- a/src/app/components/MainPage/step1/Step1.module.scss
+++ b/src/app/components/MainPage/step1/Step1.module.scss
@@ -49,7 +49,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #e0e0e0;
   
     &:last-child {
