--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,7 +18,7 @@ body {
   color: black;
   background: var(--background);
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +27,6 @@ body {
   box-sizing: border-box;
   max-width: 375px;
   margin: 0 auto;
-  border: black;
+  border: 1px solid black;
   font-family: 'Inter', sans-serif;
 }
