--- a/src/app/components/MainPage/MainPage.module.scss
+++ b/src/app/components/MainPage/MainPage.module.scss
@@ -1,16 +1,12 @@
-.app-container {
+.appContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px;
-    background-color: white;
     color: black;
-    min-height: 100vh;
     max-width: 393px;
     margin: auto;
   
     @media (min-width: 768px) {
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
   }
@@ -42,7 +38,6 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    border: 1px solid black;
     margin-bottom: 16px;
     background-color: #ffffff; 
   }
@@ -62,6 +57,11 @@
       flex-direction: column;
       align-items: center; 
       justify-content: center;
+      width: 100%;
+      padding: 10px 0px;
+      gap: var(--spacing-2-5, 10px);
+      border-radius: 20px;
+      background: #FFF;
   
       h3 {
         margin: 0;
@@ -76,12 +76,6 @@
     }
   }
 
-  .button {
-    display: flex;
-    justify-content: center;
-    margin: 20px 0 20px 0;
-
-  }
   
   .locationContainer {
     display: flex;
@@ -92,9 +86,9 @@
    
   
     .locationImage {
-      width: 100%;
+      width: 150%;
       height: 150px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
