--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,20 +3,19 @@
 
 
 :root {
-  --background: #ffffff;
+  --background: #F8FAFC;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+   --background: #F8FAFC;
     --foreground: #ededed;
   }
 }
 
 body {
   color: black;
-  background: var(--background);
   width: 100vw;
   height: 80vh;
   display: flex;
