--- a/src/app/components/Button/Button.module.scss
+++ b/src/app/components/Button/Button.module.scss
@@ -2,13 +2,14 @@
   padding: 12px 24px;
   font-size: 16px;
   cursor: pointer;
-  border-radius: 4px;
   border: none;
 }
 
 .primary {
-  background-color: black;
+  border-radius: 42px;
+  background: #3B3850;
   color: white;
+  width: 90%;
 }
 
 .secondary {
