--- a/src/app/components/Container/Container.module.scss
+++ b/src/app/components/Container/Container.module.scss
@@ -1,10 +1,11 @@
 .container {
 width: 100%;
-background-color: lightcyan;
+background-color: #F8FAFC;
 height: 100vh;
 display: flex;
 flex-direction: column;
 align-items: center;
 max-width: 480px;
+border: 1px solid black;
 
 }
