--- a/src/app/components/MainPage/MainPage.module.scss
+++ b/src/app/components/MainPage/MainPage.module.scss
@@ -1,122 +1,144 @@
 .appContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-    max-width: 393px;
-    margin-top: 20px;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: black;
+  max-width: 393px;
+  padding: 36px 16px;
+  background-color: #f1f5f9;
 
-    @media (min-width: 768px) {
-      border-radius: 8px;
-    }
+  @media (min-width: 768px) {
+    border-radius: 8px;
   }
-  
-  .profileHeader {
+}
+
+.profileHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 27px;
+
+  .profileIcon {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 16px;
-  
-    .profileIcon {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
-  
-    h2 {
-      margin: 0;
-    }
-  }
-  
-  .statContainer {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    margin-bottom: 16px;
-    background-color: #ffffff; 
-  }
-  
-  .stats {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 16px;
-    gap: 5px;
-    background-color: white;
-    justify-content: space-around;
-
-
-    div {
-      display: flex;
-      flex-direction: column;
-      align-items: center; 
-      justify-content: center;
-      width: 100%;
-      padding: 10px 0px;
-      gap: var(--spacing-2-5, 10px);
-      border-radius: 20px;
-      background: #FFF;
-  
-      h3 {
-        margin: 0;
-        font-size: 24px;
-        font-weight: 500;
-      }
-  
-      p {
-        margin: 4px 0 0;
-        font-size: 14px;
-      }
-    }
+    margin-bottom: 30px;
   }
 
-  
-  .locationContainer {
+  h2 {
+    margin: 0;
+  }
+}
+
+.statContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 30px;
+  gap: 15px;
+}
+
+.statSpec {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 82px;
+  height: 89px;
+  border-radius: 20px;
+  background: white;
+  gap: 10px;
+  display: flex;
+  h3 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  p {
+    font-size: 14px;
+    text-align: center;
+    margin: 0;
+  }
+}
+
+.locationContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 16px;
+
+  .locationImage {
+    height: 150px;
+    width: 100%;
+    margin-bottom: 20px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-   
-  
-    .locationImage {
-      width: 150%;
-      height: 150px;
-      margin-bottom: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    
-    }
-  
-    p {
-      font-size: 16px;
-      margin: 8px;
-    }
-  
-    .button {
-      margin-top: 8px;
-    }
   }
-  
-  .cityInputContainer {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 16px; 
-  }
-  
-  .cityInput {
-    border: 1px solid #000; 
-    padding: 8px;
-    border-radius: 4px;
+
+  p {
     font-size: 16px;
+    margin: 8px;
   }
-  
+
+  .button {
+    margin-top: 8px;
+  }
+}
+
+.cityInputContainer {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 40px 40px;
+  gap: 8px 8px;
+  grid-template-areas:
+    '. .'
+    '. .';
+  align-items: center;
+  margin-bottom: 37px;
+}
+
+.cityInput {
+  background: white;
+  border-radius: 2px;
+  border: 1px #e2e8f0 solid;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.cityInputLabel {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  text-align: left;
+}
+
+.levelContainer {
+  display: flex;
+  align-items: center;
+  color: #334155;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16px;
+  gap: 8px;
+}
+
+.level {
+  width: 108px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: #e3f262;
+  border-radius: 40px;
+  justify-content: center;
+  align-items: center;
+  display: inline-flex;
+}
