--- a/src/app/components/MainPage/MainPage.module.scss
+++ b/src/app/components/MainPage/MainPage.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   color: black;
-  max-width: 393px;
+  width: 100%;
   padding: 36px 16px;
   background-color: #f1f5f9;
 
