--- a/src/app/components/SetUpStepper/SetUpStepper.module.scss
+++ b/src/app/components/SetUpStepper/SetUpStepper.module.scss
@@ -1,5 +1,6 @@
 .stepperContainer {
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin-bottom: 16px;
   }
@@ -8,7 +9,7 @@
     height: 8px;
     width: 70%; /* Ustaw szerokość paska */
     background-color: #000;
-    margin-right: 16px;
+    margin-top: 52px;
     position: relative;
   
     &::after {
@@ -25,5 +26,6 @@
   .label {
     display: flex;
     font-size: 14px;
+    margin-top: 10px;
   }
   
