--- a/src/app/components/StatsBox/StatsBox.module.scss
+++ b/src/app/components/StatsBox/StatsBox.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid black;
     border-radius: 8px;
     width: 100%;
     margin: 0 auto;
@@ -10,20 +9,27 @@
   }
   
   .stat {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+    width: 82px;
+    height: 89px;
+    border-radius: 20px;
+    background: white;
+    gap: 10px;
+    display: flex;
   }
   
   .value {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
   }
   
   .label {
     font-size: 14px;
-    color: #555;
+    text-align: center;
+    margin: 0;
   }
   
