--- a/src/app/game/page.module.scss
+++ b/src/app/game/page.module.scss
@@ -10,4 +10,15 @@
     margin-top: 20px;
     text-align: center;
   }
+
+  .header {
+    display: flex;
+    margin-top: 20px;
+    color: var(--Labels-Primary, #000);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px;
+  }
   
