--- a/src/app/components/Container/Container.module.scss
+++ b/src/app/components/Container/Container.module.scss
@@ -1,11 +1,15 @@
 .container {
 width: 100%;
-background-color: #F8FAFC;
-height: 100vh;
 display: flex;
 flex-direction: column;
 align-items: center;
 max-width: 480px;
-border: 1px solid black;
+height: 90vh;
+border: 1px solid #f1f5f9;
+background-color: #f1f5f9;
 
+@media (min-width: 768px) {
+  border-radius: 8px;
 }
+}
+
