--- a/src/app/components/MainPage/step1/Step1.module.scss
+++ b/src/app/components/MainPage/step1/Step1.module.scss
@@ -51,22 +51,24 @@
   font-size: 29px;
   font-weight: 600;
   line-height: 40px;
-  text-align: left;
+
   margin: 0;
   color: #1e293b;
+  align-self: flex-start;
 }
 
 .subTitle {
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
-  text-align: left;
   margin: 0%;
   color: black;
   margin-bottom: 31px;
+  align-self: flex-start;
 }
 
 .lemurOptions {
+  width: 100%;
   margin-bottom: 52px;
   display: flex;
   flex-direction: column;
