--- a/src/app/components/MainPage/step2/Step2.module.scss
+++ b/src/app/components/MainPage/step2/Step2.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  min-height: 100vh;
 }
 
 .header {
@@ -35,6 +34,7 @@
     }
   }
 }
+
 .editButton {
   border-radius: 100%;
   margin-right: 10px;
@@ -51,22 +51,24 @@
   font-size: 29px;
   font-weight: 600;
   line-height: 40px;
-  text-align: left;
+
   margin: 0;
   color: #1e293b;
+  align-self: flex-start;
 }
 
 .subTitle {
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
-  text-align: left;
   margin: 0%;
   color: black;
   margin-bottom: 31px;
+  align-self: flex-start;
 }
 
 .lemurOptions {
+  width: 100%;
   margin-bottom: 52px;
   display: flex;
   flex-direction: column;
@@ -157,6 +159,29 @@
   margin-bottom: 14px;
   span {
     color: #94a3b8;
+  }
+}
+
+.progress {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+
+  .progressBar {
+    height: 8px;
+    width: 70%;
+    background-color: #000;
+    margin-right: 16px;
+    position: relative;
+  }
+
+  .progressBar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 33%;
+    width: 67%;
+    height: 8px;
   }
 }
 
