--- a/src/app/components/SetUpStepper/SetUpStepper.module.scss
+++ b/src/app/components/SetUpStepper/SetUpStepper.module.scss
@@ -1,31 +1,30 @@
 .stepperContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 16px;
-  }
-  
-  .stepperBar {
-    height: 8px;
-    width: 70%; /* Ustaw szerokość paska */
-    background-color: #000;
-    margin-top: 52px;
-    position: relative;
-  
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 100%;
-      width: calc(100% - 100%);
-      height: 8px;
-      background-color: #e0e0e0;
-    }
-  }
-  
-  .label {
-    display: flex;
-    font-size: 14px;
-    margin-top: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.empty {
+  width: 226px;
+  height: 8px;
+  border-radius: 9999px; 
+  background-color: #E2E8F0; 
+  position: relative;
+  overflow: hidden;
+}
+
+.stepperBar {
+  height: 100%; 
+  background-color: #475569; 
+  position: absolute; 
+  top: 0;
+  left: 0;
+  border-radius: 9999px; 
+}
+
+.label {
+  font-size: 14px;
+  margin-top: 10px;
+  color: #475569; 
+}
